gitops/apps/istio/public-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/part-of: istio-ingress
